# mmtk-scala-native

./: .gitignore  README.md
mmtk/: Cargo.toml
mmtk/src/: abi.rs  active_plan.rs  api.rs  binding.rs  collection.rs  edges.rs  lib.rs  object_model.rs  object_scanning.rs  reference_glue.rs  scanning.rs
mmtk/src/tests/: allocate_align_offset.rs  allocate_with_disable_collection.rs  allocate_with_initialize_collection.rs  allocate_with_re_enable_collection.rs  allocate_without_initialize_collection.rs  handle_mmap_conflict.rs  handle_mmap_oom.rs  issue139.rs  malloc_ms.rs  mod.rs
mmtk/src/tests/fixtures/: mod.rs
scala-native/: mmtk.c  mmtk.h
